# LuaAPIDemo

./: .gitignore  CMakeLists.txt  cmake.cmd
01_Hello/: CMakeLists.txt  hello.lua  main.cpp
02_Stack/: CMakeLists.txt  main.cpp
03_GlobalVariable/: CMakeLists.txt  hello.lua  main.cpp
04_Function/: CMakeLists.txt  hello.lua  main.cpp
05_LuaCallCpp/: CMakeLists.txt  hello.lua  main.cpp
common/: util.cpp  util.hpp
lua/lib/: liblua.lib  lua.lib
